finished lab6 at 10:45 before getting kicked out of the university

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@ processed_images/
 banana_dataset/
 processed_task7/
 dataLab6/
-
+dataLab6_heq/
+processed_images_heq/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
